[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs>=0.5,<1", "hatchling>=1.27,<2" ]

[project]
name = "meltanolabs-target-csv"
description = "Singer target for CSV, built with the Meltano SDK for Singer Targets."
readme = "README.md"
keywords = [
  "CSV",
  "ELT",
  "ETL",
  "Meltano",
  "Meltano SDK",
  "Singer",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pytz>=2025.1,<2027",
  "singer-sdk>=0.50.2,<0.55",
]
[[project.authors]]
name = "Meltano"
email = "hello@meltano.com"
[project.scripts]
target-csv = "meltanolabs_target_csv.target:TargetCSV.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest>=8.3,<10",
  "pytest-github-actions-annotate-failures>=0.3",
  "singer-sdk[testing]",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
ignore = [
  "ANN401", # Allow `typing.Any` as parameter type
]
select = [
  "ANN",  # flake8-annotations
  "C90",  # mccabe
  "D",    # pydocstyle
  "E",    # pycodestyle (error)
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "FURB", # refurb
  "PERF", # Perflint
  "UP",   # pyupgrade
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking
  "W",    # pycodestyle (warning)
]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [ "ANN", "D1", "S101" ]
[tool.ruff.lint.pydocstyle]
convention = "google"
